--- a/Draw/Controller/Chat/ChatController.xib
+++ b/Draw/Controller/Chat/ChatController.xib
@@ -44,7 +44,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{8, 101}, {305, 382}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="422428427"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -59,7 +58,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrameSize">{305, 270}</string>
 								<reference key="NSSuperview" ref="846355833"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="352374685"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -70,7 +68,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{16, 20}, {273, 34}}</string>
 								<reference key="NSSuperview" ref="846355833"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="930850284"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -106,7 +103,6 @@
 								<int key="NSvFlags">268</int>
 								<string key="NSFrame">{{16, 54}, {273, 40}}</string>
 								<reference key="NSSuperview" ref="846355833"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="996025312"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor" id="357096150">
@@ -122,7 +118,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrame">{{16, 95}, {273, 104}}</string>
 								<reference key="NSSuperview" ref="846355833"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="974623433"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor" id="1043758634">
@@ -144,7 +139,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{105, 200}, {95, 33}}</string>
 								<reference key="NSSuperview" ref="846355833"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -168,7 +162,6 @@
 						</array>
 						<string key="NSFrame">{{8, 215}, {305, 270}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="306244290"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="180674974">
@@ -186,7 +179,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{16, 10}, {273, 58}}</string>
 								<reference key="NSSuperview" ref="422428427"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="876821904"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -207,7 +199,6 @@
 										<int key="NSvFlags">274</int>
 										<string key="NSFrame">{{8, 11}, {48, 48}}</string>
 										<reference key="NSSuperview" ref="876821904"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="923374262"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
@@ -222,7 +213,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{213, 18}, {49, 33}}</string>
 										<reference key="NSSuperview" ref="876821904"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="846355833"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<reference key="IBUIBackgroundColor" ref="357096150"/>
@@ -237,12 +227,36 @@
 										<reference key="IBUIFontDescription" ref="338801675"/>
 										<reference key="IBUIFont" ref="886707040"/>
 									</object>
+									<object class="IBUILabel" id="295318190">
+										<reference key="NSNextResponder" ref="876821904"/>
+										<int key="NSvFlags">292</int>
+										<string key="NSFrame">{{213, 18}, {49, 33}}</string>
+										<reference key="NSSuperview" ref="876821904"/>
+										<string key="NSReuseIdentifierKey">_NS:9</string>
+										<bool key="IBUIOpaque">NO</bool>
+										<bool key="IBUIClipsSubviews">YES</bool>
+										<int key="IBUIContentMode">7</int>
+										<bool key="IBUIUserInteractionEnabled">NO</bool>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+										<string key="IBUIText">已关注</string>
+										<nil key="IBUIHighlightedColor"/>
+										<int key="IBUIBaselineAdjustment">0</int>
+										<float key="IBUIMinimumFontSize">10</float>
+										<object class="IBUIFontDescription" key="IBUIFontDescription">
+											<int key="type">1</int>
+											<double key="pointSize">15</double>
+										</object>
+										<object class="NSFont" key="IBUIFont">
+											<string key="NSName">Helvetica</string>
+											<double key="NSSize">15</double>
+											<int key="NSfFlags">16</int>
+										</object>
+									</object>
 									<object class="IBUILabel" id="923374262">
 										<reference key="NSNextResponder" ref="876821904"/>
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{67, 13}, {105, 24}}</string>
 										<reference key="NSSuperview" ref="876821904"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="974060178"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -270,7 +284,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{67, 41}, {44, 18}}</string>
 										<reference key="NSSuperview" ref="876821904"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="637224567"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -299,7 +312,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{119, 41}, {79, 18}}</string>
 										<reference key="NSSuperview" ref="876821904"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="777707669"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -307,7 +319,7 @@
 										<int key="IBUIContentMode">7</int>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-										<string key="IBUIText">(广东广州)</string>
+										<string key="IBUIText"/>
 										<reference key="IBUITextColor" ref="525190894"/>
 										<nil key="IBUIHighlightedColor"/>
 										<int key="IBUIBaselineAdjustment">0</int>
@@ -320,7 +332,6 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{180, 16}, {18, 18}}</string>
 										<reference key="NSSuperview" ref="876821904"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="1004384965"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -329,7 +340,6 @@
 								</array>
 								<string key="NSFrame">{{16, 66}, {273, 69}}</string>
 								<reference key="NSSuperview" ref="422428427"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="878386842"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -342,7 +352,6 @@
 						</array>
 						<string key="NSFrame">{{8, 101}, {305, 155}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="545019753"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="180674974"/>
@@ -351,7 +360,6 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="594883497"/>
 				<reference key="IBUIBackgroundColor" ref="180674974"/>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
@@ -481,6 +489,22 @@
 					<int key="connectionID">111</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">alreadFriendLabel</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="295318190"/>
+					</object>
+					<int key="connectionID">113</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">alreadPayAttentionLabel</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="295318190"/>
+					</object>
+					<int key="connectionID">114</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">clickPayAttentionButton:</string>
 						<reference key="source" ref="777707669"/>
@@ -568,6 +592,7 @@
 							<reference ref="777707669"/>
 							<reference ref="878386842"/>
 							<reference ref="923374262"/>
+							<reference ref="295318190"/>
 						</array>
 						<reference key="parent" ref="422428427"/>
 					</object>
@@ -643,6 +668,11 @@
 						<reference key="object" ref="594883497"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">112</int>
+						<reference key="object" ref="295318190"/>
+						<reference key="parent" ref="876821904"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -657,6 +687,7 @@
 				<string key="109.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="11.CustomClassName">AvatarView</string>
 				<string key="11.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="112.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="14.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -673,124 +704,9 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">111</int>
+			<int key="maxID">114</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">AvatarView</string>
-					<string key="superclassName">UIView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/AvatarView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">ChatController</string>
-					<string key="superclassName">PPTableViewController</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="avatarHolderView">UIView</string>
-						<string key="avatarView">AvatarView</string>
-						<string key="chatInfoView">UIView</string>
-						<string key="chatInfoViewBgImageView">UIImageView</string>
-						<string key="cityLabel">UILabel</string>
-						<string key="closeButton">UIButton</string>
-						<string key="expressionScrollView">UIScrollView</string>
-						<string key="microBlogImageView">UIImageView</string>
-						<string key="nameLabel">UILabel</string>
-						<string key="payAttentionButton">UIButton</string>
-						<string key="sexLabel">UILabel</string>
-						<string key="userView">UIView</string>
-						<string key="viewBgImageView">UIImageView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="avatarHolderView">
-							<string key="name">avatarHolderView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="avatarView">
-							<string key="name">avatarView</string>
-							<string key="candidateClassName">AvatarView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="chatInfoView">
-							<string key="name">chatInfoView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="chatInfoViewBgImageView">
-							<string key="name">chatInfoViewBgImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cityLabel">
-							<string key="name">cityLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="closeButton">
-							<string key="name">closeButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="expressionScrollView">
-							<string key="name">expressionScrollView</string>
-							<string key="candidateClassName">UIScrollView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="microBlogImageView">
-							<string key="name">microBlogImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="nameLabel">
-							<string key="name">nameLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="payAttentionButton">
-							<string key="name">payAttentionButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="sexLabel">
-							<string key="name">sexLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="userView">
-							<string key="name">userView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="viewBgImageView">
-							<string key="name">viewBgImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ChatController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">PPTableViewController</string>
-					<string key="superclassName">PPViewController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">dataTableView</string>
-						<string key="NS.object.0">UITableView</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">dataTableView</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">dataTableView</string>
-							<string key="candidateClassName">UITableView</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PPTableViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">PPViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PPViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
